:bug: Fix unaligned share-token dropdown.

--- a/frontend/resources/styles/main/partials/viewer-header.scss
+++ b/frontend/resources/styles/main/partials/viewer-header.scss
@@ -172,7 +172,7 @@
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
-    left: -180px;
+    left: -135px;
     position: absolute;
     padding: 1rem;
     top: 45px;
